# rsiew

./: .gitignore  README.md  package.json  pnpm-lock.yaml  rsiew-cli  test_cli  test_cli.rs  test_gui  test_gui.rs  test_json.cjs  test_json.js  vite.config.ts
.pnpm-store/v10/index/01/: 93e62075c403286992637b69696a8d27d8ca79a45a596e0cd3c730264a1471-@vue+runtime-core@3.5.31.json
.pnpm-store/v10/index/04/: c63fa334bfc718d8a9114bfad29d4690132580d34e0592a34f8026f24d8388-@vue+compiler-dom@3.5.31.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  monitor.rs  ocr.rs  schema.rs  service.rs  user_path.rs  utils.rs
src-tauri/src/cli/: mod.rs  out.rs  rule.rs  stats.rs  watch.rs
src-tauri/src/config/: categorize.rs  mod.rs  privacy.rs  rule.rs  screenshot.rs  storage.rs
src-tauri/src/core/: cmd.rs  error.rs  handle.rs  init.rs  mod.rs  tray.rs
src-tauri/src/core/window/: config.rs  manager.rs  mod.rs  position.rs  schema.rs
src-tauri/src/schema/: mod.rs
src-tauri/src/service/: idle.rs  linux_session.rs  mod.rs  monitor.rs  ocr.rs  process.rs  screenlock.rs  screenshot.rs
src-tauri/src/service/monitor/: browser.rs  mod.rs  taskbar.rs  tray.rs
src-tauri/src/service/rule/: decode.rs  determine.rs  extract.rs  filter.rs  mod.rs  normalize.rs  resolve.rs
src-tauri/src/utils/: activity_classifier.rs  categorize.rs  icon_extractor.rs  mod.rs
(+70 files in other folders)
