[package]
name = "rsiew"
version = "0.1.5"
description = "A simplified Work Review clone with Native Icons and Tray"
authors = ["you"]
edition = "2021"

[lib]
name = "rsiew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
image = "0.25.1"
base64 = "0.22"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = [
    "winuser", 
    "processthreadsapi", 
    "psapi", 
    "handleapi", 
    "winnt", 
    "winbase",
    "shellapi",
    "wingdi",
    "objbase",
    "commoncontrols",
    "wincon",
    "processenv",
    "consoleapi"
] }
windows-capture = "1.5"

[target.'cfg(target_os = "macos")'.dependencies]
screenshots = "0.8"

[features]
default = []
